--- a/src/Pages/Portfolio.module.css
+++ b/src/Pages/Portfolio.module.css
@@ -18,15 +18,27 @@
 .grid-item {
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 20px;
+    border-radius: 20px;
+    padding: 10px;
     font-size: 30px;
     text-align: center;
+    align-items: center;
     justify-content: center;
   }
 
 img {
-    width: 70%;
+    width: 80%;
 }
+a {
+    text-decoration: none;
+}
+p {
+    font-size: 1.5rem;
+    /* text-align: center;
+    align-items: center;
+    justify-content: center; */
+}
+
 
 @media only screen and (max-width: 600px) {
     .grid-container {
