--- a/src/Pages/Portfolio.module.css
+++ b/src/Pages/Portfolio.module.css
@@ -25,9 +25,15 @@
     align-items: center;
     justify-content: center;
   }
+  .Headshot {
+      max-width: 300px;
+      max-height: 400px;
+  }
 
 img {
     width: 80%;
+    height: auto;
+    /* max-width: 300px; */
 }
 a {
     text-decoration: none;
