--- a/src/Components/Intro.module.css
+++ b/src/Components/Intro.module.css
@@ -1,5 +1,5 @@
 .grid-container {
-    padding-top: 40px;
+    padding-top: 70px;
     padding-bottom:40px;
     padding-left: 20px;
     padding-right: 20px;
@@ -10,20 +10,22 @@
     /* grid-template-columns: repeat(5, 1fr 2fr); */
     /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
     grid-template-columns: repeat(2, 1fr);
-    background-color: #2196F3;
+    /* background-color: #2196F3; */
+    background-color:  #2196F3;
     /* padding: 10px; */
     justify-content: center;
 }
 
 .grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid rgba(0, 0, 0, 0.8);
+    /* background-color: rgba(255, 255, 255, 0.8); */
+    /* border: 1px solid rgba(0, 0, 0, 0.8); */
     border-radius: 20px;
     padding: 10px;
     font-size: 30px;
     text-align: center;
     align-items: center;
     justify-content: center;
+    /* vertical-align: middle; */
   }
   .Headshot {
       max-width: 300px;
@@ -38,12 +40,17 @@ img {
 a {
     text-decoration: none;
 }
-p {
+
+.quote {
     font-size: 1.5rem;
+    font-family: Tahoma, sans-serif;
+    color: rgb(255, 255, 255);
+
     /* text-align: center;
     align-items: center;
     justify-content: center; */
 }
+
 
 
 @media only screen and (max-width: 600px) {
