--- a/src/Components/WebApps.module.css
+++ b/src/Components/WebApps.module.css
@@ -1,3 +1,9 @@
+.comp {
+    background-color:rgb(23, 22, 22);
+    /* margin:auto; */
+    padding-top: 30px;
+}
+
 .grid-container {
     padding-top: 40px;
     padding-bottom:40px;
@@ -10,7 +16,8 @@
     /* grid-template-columns: repeat(5, 1fr 2fr); */
     /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
     grid-template-columns: repeat(2, 1fr);
-    background-color: #2196F3;
+    /* background-color: #2196F3; */
+    /* background-color: rgb(0, 0, 0); */
     /* padding: 10px; */
     justify-content: center;
 }
@@ -38,12 +45,15 @@ img {
 a {
     text-decoration: none;
 }
-p {
-    font-size: 1.5rem;
-    /* text-align: center;
-    align-items: center;
-    justify-content: center; */
+h1 {
+   color: white;
+    padding-top:40px;
 }
+
+.pname {
+    color:rgb(0, 0, 0);
+}
+
 
 
 @media only screen and (max-width: 600px) {
